fix(_home.scss): adjusting how top menu is placed on mobile to prevent URL bar hiding it
using position: absolute; didnt resize when using vh units when URL bars on mobile appear on scroll
down. This hides the menu on actual mobile devices but is not noticed on desktop testing
environments. the solution was to using position: fixed; and this resizes vh units when URL bar
appears. see: https://developers.google.com/web/updates/2016/12/url-bar-resizing

--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -2379,18 +2379,18 @@ section#content-container {
     border: 1px solid #384952;
     border-radius: 50px;
     display: flex;
-    position: absolute;
+    position: fixed;
     z-index: 999;
     transition: top 0.6s;
 
     &.hide {
-      top: -110vh;
+      top: -20vh;
     }
   }
 
   .mobile-top-menu-dropdown,
   .menu-tab {
-    top: -100vh;
+    top: 0vh;
   }
 
   .top-menu > .logo-img {
